fixed navbar/jumbotron on mobile devices (AH)

--- a/hogwarts/marauder/static/css/base.css
+++ b/hogwarts/marauder/static/css/base.css
@@ -119,13 +119,11 @@ body {
     }
 
     .jumbotron {
-        margin:0;
-        padding:0;
-        visibility: hidden;
+        display: none;
     }
 
-    .jumbotron {
-        visibility: hidden;
+    .top-index {
+        padding-top: 15px;
     }
 
 }
